# kb-android-emulator

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.cargo/: config.toml.example
.github/workflows/: check-build.yml  release.yml
src/: App.jsx  api.js  i18n.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  commands.rs.bak  main.rs
src-tauri/src/commands/: avd.rs  hypervisor.rs  install.rs  launch.rs  mod.rs  paths.rs  system_info.rs  types.rs  window.rs
src/components/: Devices.jsx  GpuSettings.jsx  SdkManager.jsx  Settings.jsx  UI.jsx
src/localization/: bd.json  en.json  hi.json
