[package]
name = "kb-android-emulator"
version = "0.1.3"
description = "KB Android Emulator Manager - Standalone GPU-optimized Android Emulator"
authors = ["KB"]
edition = "2021"

[lib]
name = "kb_android_emulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
which = "6"
zip = "2"
dirs = "5"
anyhow = "1"
# Cross-platform system information (RAM, CPU) — replaces PowerShell WMI queries
sysinfo = "0.30"

# Windows-only dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
